Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81278

Switching axis that is shared by multiple series to another doesn't work

XMLWordPrintable

    • 968e128f3379514b476ed21dd92cf2ac8f9f861d (qt/qtcharts/dev) 47fbf543afce30d54c0061a9bba84c5470513ded (qt/qtcharts/6.2) ec6cf5ff38a7f65578cdecbd90cc15e2c30f0370 (qt/tqtc-qtcharts/5.15)

      Attached example tries to switch between LogValueAxis and ValueAxis in two ways neither of which works. It uses simple binding for Y axis between the series is leaking axis from the other series when change occurs so that there will be new axis added with every step. Manually setting the same axis for both series in the handler is also not working.

        1. qtbug81278.zip
          2 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-81278
        # Subject Branch Project Status CR V

            hatemelkharashy Hatem ElKharashy
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes