Fix axes not being removed when shared

Switching axes that is shared between multiple series
causes them not to be removed. The axis must be detached
from the series when removed so that it can be removed
in the next iteration.

Fixes: QTBUG-81278
Change-Id: Iba9e027333ed924ff985e36184f7e6d49d2124cf
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
(cherry picked from commit 968e128f3379514b476ed21dd92cf2ac8f9f861d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>